--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.wsy.parent</groupId>
+                <artifactId>model</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${cloud.version}</version>
