--- a/service/service_hosp/pom.xml
+++ b/service/service_hosp/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service_hosp</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.wsy.parent</groupId>
+            <artifactId>model</artifactId>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
