--- a/service/service_hosp/pom.xml
+++ b/service/service_hosp/pom.xml
@@ -15,6 +15,12 @@
             <groupId>com.wsy.parent</groupId>
             <artifactId>model</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.wsy.parent</groupId>
+            <artifactId>common_util</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <properties>
